testsuite/tests/grammar/invalid_lexers/rule_2.lkt
import common

lexer foo_lexer {
    LexingFailure <- "example"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
